--- a/style.css
+++ b/style.css
@@ -76,8 +76,12 @@ nav button{
 }
 .btn{
     padding: 0px 10px;
-    font-weight: bold;
-    background-color: white;
+    font-weight: 400;
+    background-color: rgba(255, 255, 255, 0.105);
+    color: white;
+    border: 1px solid white;
+    border-radius: 4px;
+    cursor: pointer;
 }
 .btn-red{
     background-color: red;
@@ -85,13 +89,204 @@ nav button{
     padding: 3px 24px;
     border-radius: 4px;
     font-size: 20px;
+    font-weight: 400;
 }
 .btn-red-sm{
     background-color: red;
     color: white;
 }
 .main input{
-    padding: 3px 24px;
+    padding: 7px 100px 8px 14px;
     border-radius: 4px;
-    font-size: 20px;   
+    font-size: 15px;
+    font-weight: 900;
+    background-color: rgba(23,23,23,0.7);   
+    border: 1px solid rgba(239, 236, 236, 0.5);
+    color: white;
+}
+.tb-buttons{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 16px;
+}
+.first{
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 70vw;
+    margin: auto;
+}
+@media screen and (max-width: 1200px) {
+    .first{
+        flex-wrap: wrap;
+    }
+}
+.SecImg{ 
+    position: relative;
+}
+.SecImg img {
+    width: 555px;
+    position: relative;
+    z-index: 10;
+}
+
+.SecImg video {
+    position: absolute;
+    top: 80px;
+    right: 2px;
+    width: 482px;
+}
+.first > div{
+    display: flex;
+    flex-direction: column;
+    padding: 34px 0;
+}
+.first > div :first-child {
+    font-size: 3rem;
+    font-weight: bolder;
+}
+
+.first >div :nth-child(2){
+    font-size: 1.5rem;
+}
+.third > .SecImg video{
+    position: absolute;
+    top: 34px;
+    right: 105px;
+    width: 360px;
+}
+.faq{
+    color: white;
+    padding: 34px;
+}
+.faq h2{
+    text-align: center;
+    font-size: 48px;
+}
+.faqbox:hover {
+    background-color: #414141;
+    color: white;
+}
+
+.faqbox svg {
+    filter: invert(1);
+}
+
+.faqbox {
+    transition: all 1s ease-out;
+    font-size: 24px;
+    display: flex;
+    justify-content: space-between;
+    background-color: #2d2d2d;
+    padding: 24px;
+    max-width: 60vw;
+    margin: 34px auto;
+    cursor: pointer;
+}
+
+.second .SecImg img{
+    width: 25rem;
+}
+.second{
+    margin: 7rem;
+}
+
+footer {
+    color: white;
+    max-width: 60vw;
+    margin: auto;
+    padding: 60px;
+}
+
+footer .questions {
+    padding: 34px 0;
+}
+
+
+.footer {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    color: white;
+}
+
+
+
+@media screen and (max-width: 1300px) {
+
+    nav{
+        max-width: 90vw;
+    }
+
+    .first {
+        flex-wrap: wrap;
+    }
+
+    .secImg img {
+        width: 305px;
+    }
+
+    .secImg video {
+        width: 305px;
+    }
+
+    .TextBox> :nth-child(1) {
+        font-size: 32px;
+    }
+
+    .TextBox> :nth-child(2) {
+        font-size: 18px;
+    }
+
+    .TextBox> :nth-child(3) {
+        font-size: 18px;
+    }
+
+    .tb-buttons {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 16px;
+    }
+
+    .faq h2 {
+        text-align: center;
+        font-size: 32px;
+    }
+
+    footer {
+        max-width: 90vw;
+        padding: 75px 0;
+    }
+
+    .footer-item{
+        align-items: center;
+    }
+ 
+
+}
+
+
+
+@media screen and (max-width: 1300px) {
+
+    .footer {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 25px;
+    }
+}
+
+
+.footer a {
+    font-size: 14px;
+    color: white;
+}
+
+.footer-item {
+    display: flex;
+    flex-direction: column;
+    gap: 23px;
 }
